objects/copado__Record_Matching_Formula__c.object
<CustomObject>
    <fields>
        <fullName>copado__Configuration_Source_Org__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Credential from where Copado retrieves the list of objects and fields available to build the formula.</inlineHelpText>
        <label>Configuration Schema Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Record Matching Formulas</relationshipLabel>
        <relationshipName>Record_Matching_Formulas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Field_1__c</fullName>
        <inlineHelpText>First field in the formula</inlineHelpText>
        <label>Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Field_2__c</fullName>
        <inlineHelpText>Second field in the formula</inlineHelpText>
        <label>Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Field_3__c</fullName>
        <inlineHelpText>Third field in the formula</inlineHelpText>
        <label>Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Field_Labels__c</fullName>
        <description>This field stores labels of fields stored in the Field1, Field2, Field3</description>
        <label>Field Labels</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Hash_Formula__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hashing the Formula will replace the original value with a unique, fixed-size set of random characters. It will ensure the value will not exceed the External Id field character limit but it will not be readable.</inlineHelpText>
        <label>Hash External Id Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Object2__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Select the object from the dropdown to configure the formula. The fields available for the formula are based on the selected object and source org.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Object__c</fullName>
        <description>Obsolete, use Object2__c instead</description>
        <externalId>true</externalId>
        <inlineHelpText>Select the object from the dropdown to configure the formula. The fields available for the formula are based on the selected object and source org.</inlineHelpText>
        <label>Object (Obsolete)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Record Matching Formula</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Object2__c</columns>
        <columns>copado__Field_1__c</columns>
        <columns>copado__Field_2__c</columns>
        <columns>copado__Field_3__c</columns>
        <columns>copado__Hash_Formula__c</columns>
        <columns>copado__Configuration_Source_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Record Matching Formula Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Matching Formulas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__RestrictSchemaCredentialModification</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( copado__Configuration_Source_Org__c))</errorConditionFormula>
        <errorDisplayField>copado__Configuration_Source_Org__c</errorDisplayField>
        <errorMessage>You can not change the Configuration Schema Credential once the value is selected.</errorMessage>
    </validationRules>
</CustomObject>